initial rendering with babylon.js

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <script>
     System.import('Game').then(function (Game) {
-      game = new Game();
+     var game = new Game.Game();
     });
   </script>
 
