some init positioning logic

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
   <script>
     System.import('Game').then(function (Game) {
-     var game = new Game.Game();
+      new Game.Game();
     });
+
+
   </script>
 
 </head>
-
-<!--<body onload="start()">-->
 <body>
 <canvas id="glcanvas" width="640" height="480">
   Your browser doesn't appear to support the HTML5 <code>&lt;canvas&gt;</code> element.
