framework for unit commands initial

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="bower_components/babylonjs/babylon.1.10.0.js"></script>
 
   <script>
-    System.import('Game').then(function (Game) {
+    System.import('lib/Game').then(function (Game) {
       new Game.Game();
     });
 
