--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head lang="en">
   <meta charset="UTF-8">
   <title></title>
-  <script src="bower_components/traceur/traceur.js"></script>
-  <script src="bower_components/es6-module-loader/dist/es6-module-loader.js"></script>
-  <script src="bower_components/babylonjs/babylon.1.10.0.js"></script>
+  <script src="node_modules/babel-core/browser.js"></script>
+  <script src="node_modules/es6-module-loader/dist/es6-module-loader.js"></script>
+  <script src="node_modules/babylonjs/babylon.js"></script>
 
   <script>
-    System.import('lib/Game').then(function (Game) {
-      new Game.Game();
+    System.transpiler = 'babel';
+    System.import('lib/Game').then(function (m) {
+      new m.Game();
     });
 
 
