Start move to  typescript WIP

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head lang="en">
   <meta charset="UTF-8">
   <title></title>
+  <link rel="stylesheet" href="style.css">
   <script src="node_modules/babel-core/browser.js"></script>
   <script src="node_modules/es6-module-loader/dist/es6-module-loader.js"></script>
   <script src="node_modules/babylonjs/babylon.js"></script>
@@ -18,7 +19,7 @@
 
 </head>
 <body>
-<canvas id="glcanvas" width="640" height="480">
+<canvas id="glcanvas" >
   Your browser doesn't appear to support the HTML5 <code>&lt;canvas&gt;</code> element.
 </canvas>
 </body>
