--- a/index.html
+++ b/index.html
@@ -3,24 +3,11 @@
 <head lang="en">
   <meta charset="UTF-8">
   <title></title>
-  <link rel="stylesheet" href="style.css">
-  <script src="node_modules/babel-core/browser.js"></script>
-  <script src="node_modules/es6-module-loader/dist/es6-module-loader.js"></script>
-  <script src="node_modules/babylonjs/babylon.js"></script>
-
-  <script>
-    System.transpiler = 'babel';
-    System.import('lib/Game').then(function (m) {
-      new m.Game();
-    });
-
-
-  </script>
-
 </head>
 <body>
 <canvas id="glcanvas" >
   Your browser doesn't appear to support the HTML5 <code>&lt;canvas&gt;</code> element.
 </canvas>
+<script src="dist/density-wars.js"></script>
 </body>
 </html>
