Update deps and paths

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <canvas id="glcanvas" >
   Your browser doesn't appear to support the HTML5 <code>&lt;canvas&gt;</code> element.
 </canvas>
+<script src="node_modules/babylonjs/babylon.max.js"></script>
 <script src="dist/density-wars.js"></script>
 </body>
 </html>
