Switch to stylus + add players div + demo url

--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
   <title></title>
 </head>
 <body>
-<canvas id="glcanvas" >
+<canvas id="glcanvas">
   Your browser doesn't appear to support the HTML5 <code>&lt;canvas&gt;</code> element.
 </canvas>
+
+
+<div class="players">
+  <div class="player">
+  </div>
+  <div class="player">
+  </div>
+</div>
+
 <script src="node_modules/babylonjs/babylon.max.js"></script>
 <script src="dist/density-wars.js"></script>
 </body>
