add placeholders for map and player hud + styles

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   Your browser doesn't appear to support the HTML5 <code>&lt;canvas&gt;</code> element.
 </canvas>
 
+<div id="usernamePopup" class="">
+
+</div>
 
 <div class="players">
   <div class="player">
@@ -17,7 +20,8 @@
   </div>
 </div>
 
-<script src="node_modules/babylonjs/babylon.max.js"></script>
+<canvas id="map" width="192" height="192" style="bottom: 50px; left: 50px;"></canvas>
+
 <script src="dist/density-wars.js"></script>
 </body>
 </html>
