--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head lang="en">
   <meta charset="UTF-8">
   <title></title>
+  <script src="node_modules/babylonjs/babylon.max.js" type="text/javascript"></script>
 </head>
 <body>
 <canvas id="glcanvas">
