--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
        alt="Fork me on GitHub"
        data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
 
-
+<section id="info">
+  <h1>Changelog</h1>
+  <h2>25th Dec 2015 </h2>
+  <p>Added unit selection</p>
+</section>
 <script src="dist/density-wars.js"></script>
 </body>
 </html>
