basic movement code with end formation

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 
 <section id="info">
   <h1>Changelog</h1>
+  <h2>27th Dec 2015 </h2>
+  <p>Added unit movement</p>
   <h2>25th Dec 2015 </h2>
   <p>Added unit selection</p>
 </section>
