Added initial firing

--- a/index.html
+++ b/index.html
@@ -33,11 +33,20 @@
   <h1>Changelog</h1>
   <h2>28th Dec 2015 </h2>
   <p>Added center of mass marker</p>
+  <p>Initial fire between units (WIP)</p>
   <h2>27th Dec 2015 </h2>
   <p>Added unit movement</p>
   <h2>25th Dec 2015 </h2>
   <p>Added unit selection</p>
 </section>
+
+<section id="guide">
+  <h1>Guide</h1>
+  <p>Click on your blue spheres (+shift for multi-select) then click on the grid and they will move there</p>
+  <p>Click on an enemy unit (red) to shoot</p>
+  <p>The green box is the center of mass (more coming soon)</p>
+</section>
+
 <script src="dist/density-wars.js"></script>
 </body>
 </html>
