Fire can destory units + placeholder for AI attack strategy

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <canvas id="glcanvas">
   Your browser doesn't appear to support the HTML5 <code>&lt;canvas&gt;</code> element.
 </canvas>
+<!--<canvas id="canvas2D">
+  Your browser doesn't appear to support the HTML5 <code>&lt;canvas&gt;</code> element.
+</canvas>-->
 
 <div id="usernamePopup" class="">
 
