--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <canvas id="glcanvas">
   Your browser doesn't appear to support the HTML5 <code>&lt;canvas&gt;</code> element.
 </canvas>
-<!--<canvas id="canvas2D">
+<canvas id="gameOverlay">
   Your browser doesn't appear to support the HTML5 <code>&lt;canvas&gt;</code> element.
-</canvas>-->
+</canvas>
 
 <div id="usernamePopup" class="">
 
