move to steal js from webpack

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
   <p>The green box is the center of mass (more coming soon)</p>
 </section>
 
-<script src="dist/density-wars.js"></script>
+<script src="node_modules/systemjs/dist/system.js"></script>
+<script src="dist/tsc.js"></script>
+<script src="Main.js"></script>
 </body>
 </html>
